--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,9 +31,9 @@
     "date-fns": "^4.1.0",
     "firebase": "^12.5.0",
     "lucide-react": "^0.454.0",
-    "next": "^16.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "16.0.8",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.53.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
@@ -41,11 +41,11 @@
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.18",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.8",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
